Statistical Models - Section 1.5

--- a/SpaCy Workbook.ipynb
+++ b/SpaCy Workbook.ipynb
@@ -38,15 +38,6 @@
   },
   {
    "source": [
-    "!pip install SpaCy"
-   ],
-   "cell_type": "code",
-   "metadata": {},
-   "execution_count": null,
-   "outputs": []
-  },
-  {
-   "source": [
     "## Chapter 1 - The NLP Object\n",
     "\n",
     "SpaCy has multiple different objects for each language. Here we will use the English NLP object to consume sentences and use the libary to process the text.\n",
@@ -61,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -73,6 +64,7 @@
     }
    ],
    "source": [
+    "import spacy\n",
     "from spacy.lang.en import English\n",
     "\n",
     "# Create the nlp object\n",
@@ -94,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -121,14 +113,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "This\nis\na\nsentence\n.\n"
+      "Liebe\nGrüße\n!\n"
      ]
     }
    ],
@@ -146,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +218,7 @@
   },
   {
    "source": [
-    "#### Lexical Attributes\n",
+    "#### 1.3 Lexical Attributes\n",
     "We will use lexical attributes to find percentages in a text. You’ll be looking for two subsequent tokens: a number and a percent sign.\n",
     "\n",
     "Key Summary:\n",
@@ -238,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -270,6 +262,108 @@
     "        if next_token.text == \"%\":\n",
     "            print(\"Percentage found:\", token.text +\"%\")"
    ]
+  },
+  {
+   "source": [
+    "#### 1.4 Statistical Packages \n",
+    "en_core_web_sm is a small english package\n",
+    "\n",
+    "It can be used to:\n",
+    "- predict part of speech tags"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "She PRON\nate VERB\nthe DET\npizza NOUN\n"
+     ]
+    }
+   ],
+   "source": [
+    "nlp = spacy.load(\"en_core_web_sm\")\n",
+    "\n",
+    "doc = nlp(\"She ate the pizza\")\n",
+    "\n",
+    "for token in doc:\n",
+    "    # Print the text and the predicted part of speech tag\n",
+    "    print(token.text, token.pos_)"
+   ]
+  },
+  {
+   "source": [
+    "#### More detailed version\n",
+    "Helps you understand the context of a sentenance through pos_, dep_ and .head.text"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Apple PROPN nsubj looking\nis AUX aux looking\nlooking VERB ROOT looking\nat ADP prep looking\nbuying VERB pcomp at\nU.K PROPN compound startup\nstartup NOUN dobj buying\nfor ADP prep buying\n$ SYM quantmod billion\n1 NUM compound billion\nbillion NUM pobj for\n"
+     ]
+    }
+   ],
+   "source": [
+    "for token in doc:\n",
+    "    print(token.text, token.pos_,token.dep_,token.head.text)"
+   ]
+  },
+  {
+   "source": [
+    "#### Entity Detection\n",
+    "In Spacy, we can also detect and classify entities as seen below"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "doc = nlp(\"Apple is looking at buying U.K startup for $1 billion\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Apple ORG\nU.K ORG\n$1 billion MONEY\n"
+     ]
+    }
+   ],
+   "source": [
+    "for ent in doc.ents:\n",
+    "    print(ent.text, ent.label_)"
+   ]
+  },
+  {
+   "source": [
+    "#### It's important to note the model package will not provide the labelled data the model was trained on."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
